kubernetes/prod/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: csv-web-tools-service
  namespace: csv-web-tools
spec:
  selector:
    app: csv-web-tools
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: https
      port: 443
      targetPort: 443
  type: ClusterIP
